service-html-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: html-proxy
  labels:
    app: iso-share
    component: html-proxy
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: iso-share
    component: html-proxy
  type: ClusterIP
